--- a/YOLOv5_Hyperparameter_Evolution.ipynb
+++ b/YOLOv5_Hyperparameter_Evolution.ipynb
@@ -6,7 +6,7 @@
       "name": "YOLOv5-Hyperparameter-Evolution.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXdzVXdTuEnNzlJVeawa2R",
+      "authorship_tag": "ABX9TyOjqXwguuOmREC0jM4a/AiD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -36,7 +38,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XzxQASmvBMcF",
-        "outputId": "288259b2-e9bb-4856-fc21-018838338286"
+        "outputId": "2f2439fd-4bff-4f4b-aa45-13b2686d4fe1"
       },
       "outputs": [
         {
@@ -84,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jDTqd5ntBzrx",
-        "outputId": "c61e79df-59df-4773-f771-e47aef75a503"
+        "outputId": "5d1a184d-eeef-49b6-988d-35d19e7c93f1"
       },
       "execution_count": 2,
       "outputs": [
@@ -125,7 +127,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j0JpWuu2CNsx",
-        "outputId": "6cb990dc-c5e8-408f-a7a1-23f7fd4f6f39"
+        "outputId": "ce46d529-496f-40d6-b2d8-f5ee85ef2d6f"
       },
       "execution_count": 3,
       "outputs": [
@@ -134,17 +136,17 @@
           "name": "stdout",
           "text": [
             "/content/drive/MyDrive/colab/yolov5\n",
-            "\u001b[K     |████████████████████████████████| 1.6 MB 5.1 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 145 kB 4.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 178 kB 48.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 52.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 67 kB 5.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 54 kB 2.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 138 kB 57.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.6 MB 51.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 145 kB 40.4 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 178 kB 54.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.1 MB 60.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 67 kB 2.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 54 kB 3.0 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 138 kB 60.0 MB/s \n",
             "\u001b[K     |████████████████████████████████| 62 kB 1.4 MB/s \n",
             "\u001b[?25h  Building wheel for roboflow (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Setup complete. Using torch 1.12.1+cu113 (CPU)\n"
+            "Setup complete. Using torch 1.12.1+cu113 (Tesla T4)\n"
           ]
         }
       ]
@@ -166,7 +168,7 @@
       "metadata": {
         "id": "74vyWN2ow3J2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +180,7 @@
       "metadata": {
         "id": "j7DdSEfdwi6t"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -196,7 +198,7 @@
         "id": "zgivqUXHwLTT",
         "outputId": "f6e2808c-9b5c-420b-ab45-91930e102671"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,6 +217,63 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Hyperparameter Evolution"
+      ],
+      "metadata": {
+        "id": "z_Erg9pP1wJ6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hyperparameters in ML control various aspects of training, and finding optimal values for them can be a challenge. Traditional methods like grid searches can quickly become intractable due to\n",
+        "<br>\n",
+        "1) the high dimensional search space,\n",
+        "<br>\n",
+        "2) unknown correlations among the dimensions,\n",
+        "<br>\n",
+        "3) expensive nature of evaluating the fitness at each point.\n",
+        "<br>\n",
+        "These reasons makes GA a suitable candidate for hyperparameter searches."
+      ],
+      "metadata": {
+        "id": "aYd_Syh31237"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python train.py --epochs 10 --data '/content/drive/MyDrive/colab/datasets/ShipClassification-3/data.yaml' --weights yolov5m.pt --cache --evolve"
+      ],
+      "metadata": {
+        "id": "GIQz51En1xxP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Train the data"
+      ],
+      "metadata": {
+        "id": "63AJn7ny6Cvj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python train.py --img 416 --batch 32 --epochs 150 --data '/content/drive/MyDrive/colab/datasets/ShipClassification-3/data.yaml' --weights yolov5m.pt --cache --hyp \"/content/drive/MyDrive/colab/yolov5/runs/evolve/exp/hyp_evolve.yaml\""
+      ],
+      "metadata": {
+        "id": "5a71ySkJ48qu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
